# b2500-meter

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INVESTIGATION.md  ISSUE_217_GITHUB_RESPONSE.md  ISSUE_217_INVESTIGATION.md  ISSUE_217_RESPONSE.md  Pipfile  README.md  config.ini.example  ct002_override.json  docker-compose.yaml  health_service.py  investigate_leak_causes.py  main.py  marstek_api.py  nodered.json  pyproject.toml  release.sh  repository.yaml  smartmeter.py  smartmeter_test.py  test_dual_request_leak.py  test_hidden_references.py  test_memory_leak.py  test_threadpool_leak.py  test_throttling_leak.py  version_info_test.py
b2500/: __init__.py  b2500.py
config/: __init__.py  config_loader.py  config_loader_test.py  logger.py
ct001/: __init__.py  ct001.py
ct002/: __init__.py  ct002.py
docs/: ct002-capture-analysis.md  ct002-ct003-protocol.md
ha_addon/: Dockerfile  config.yaml  run.sh
powermeter/: __init__.py  amisreader.py  amisreader_test.py  base.py  em300.py  em300_test.py  emlog.py  emlog_test.py  envoy.py  envoy_test.py  esphome.py  esphome_test.py  homeassistant.py  homeassistant_test.py  homewizard.py  homewizard_test.py  iobroker.py  iobroker_test.py  json_http.py  json_http_test.py  modbus.py  modbus_test.py  mqtt.py  mqtt_test.py  script.py  script_test.py  shelly.py  shelly_test.py  shrdzm.py  shrdzm_test.py  sma_energy_meter.py  sma_energy_meter_test.py  sml.py  sml_test.py  tasmota.py  tasmota_test.py  throttling.py  throttling_test.py  tq_em.py  tq_em_test.py  (+4 more)
shelly/: __init__.py  shelly.py  shelly_http.py  shelly_http_test.py  shelly_udp_test.py
tests/: test_ct002_active_control.py  test_ct002_mac_policy.py  (+5 more)
(+69 files in other folders)
