[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b2500-meter"
version = "1.1.0"
description = "Power-meter monitoring for Marstek B2500 battery inverters"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "requests",
    "urllib3",
    "paho-mqtt",
    "jsonpath-ng",
    "pymodbus==3.6.5",
    "websocket-client==1.8.0",
    "smllib",
    "pyserial",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.13.0",
]
sim = [
    "aiohttp>=3.9.0",
    "textual>=1.0.0",
]

[project.scripts]
b2500-meter = "b2500_meter.main:main"
b2500-sim = "b2500_meter.simulator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/b2500_meter"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# Formatter handles wrapping; avoid duplicate line-length noise with E501
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["b2500_meter"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = false
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = ["src"]
# Typed surfaces only; full strictness would require annotating the whole codebase
check_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["import-untyped"]
